--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="bg-slate-800">
     <div id="modal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
